--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-toggle": "^1.1.9",
     "@reduxjs/toolkit": "^2.8.1",
     "@tiptap/extension-text-align": "^2.23.0",
