--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.8",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-toggle": "^1.1.9",
     "@reduxjs/toolkit": "^2.8.1",
@@ -20,10 +21,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "froala-editor": "^4.6.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-froala-wysiwyg": "^4.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
