--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@editorjs/editorjs": "^2.30.8",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-toggle": "^1.1.9",
@@ -18,6 +20,7 @@
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
     "axios": "^1.9.0",
+    "ckeditor5": "^46.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
