--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ckeditor5": "^46.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "formik": "^2.4.6",
     "froala-editor": "^4.6.0",
     "lucide-react": "^0.525.0",
