--- a/package.json
+++ b/package.json
@@ -2,13 +2,30 @@
   "name": "liquid-dms-admin-panel",
   "version": "0.1.0",
   "private": true,
+  "main": "electron/main.js",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "cross-env NEXT_TELEMETRY_DISABLED=1 next dev",
+    "dev:electron": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && cross-env ELECTRON_START_URL=http://localhost:3000 electron .\"",
+    "dev:full": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron": "wait-on http://localhost:3000 && cross-env ELECTRON_START_URL=http://localhost:3000 electron .",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prebuild:electron": "npm run build",
+    "build:electron": "electron-builder",
+    "build:win": "npm run build && electron-builder --win",
+    "build:mac": "npm run build && electron-builder --mac",
+    "build:linux": "npm run build && electron-builder --linux",
+    "build:all": "npm run build && electron-builder --win --mac --linux",
+    "build:portable": "npm run build && electron-builder --win portable",
+    "build:installer": "npm run build && electron-builder --win nsis",
+    "build:zip": "npm run build && electron-builder --win zip",
+    "pack": "electron-builder --dir",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/s3-request-presigner": "^3.0.0",
     "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@ckeditor/ckeditor5-react": "^11.0.0",
     "@editorjs/editorjs": "^2.30.8",
@@ -20,14 +37,33 @@
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "ckeditor5": "^46.0.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dompurify": "^3.2.6",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.0.1",
+    "express-slow-down": "^3.0.0",
+    "express-validator": "^7.2.1",
     "formik": "^2.4.6",
     "froala-editor": "^4.6.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "ioredis": "^5.7.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.16.1",
+    "multer": "^2.0.1",
+    "multer-s3": "^3.0.1",
     "next": "15.3.2",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
@@ -39,7 +75,10 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "slick-carousel": "^1.8.1",
+    "streamifier": "^0.1.1",
     "tailwind-merge": "^3.3.1",
+    "winston": "^3.17.0",
+    "xss-clean": "^0.1.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -48,10 +87,17 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
+    "electron": "^38.1.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "express": "^4.21.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^8.0.5"
   }
 }
