build: speed pack by disabling npm and node-gyp rebuilds in electron-builder

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -18,6 +18,8 @@ asarUnpack:
   - "node_modules/**/*.node"
 compression: normal
 electronVersion: 38.1.0
+npmRebuild: false
+nodeGypRebuild: false
 
 # Windows Configuration
 win:
