feat(tauri): scaffold Tauri, remove Electron, add Windows CI workflow

--- a/package.json
+++ b/package.json
@@ -2,26 +2,21 @@
   "name": "liquid-dms-admin-panel",
   "version": "0.1.0",
   "private": true,
-  "main": "electron/main.js",
   "scripts": {
-    "dev": "cross-env NEXT_TELEMETRY_DISABLED=1 next dev",
-    "dev:electron": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && cross-env ELECTRON_START_URL=http://localhost:3000 electron .\"",
-    "dev:full": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron": "wait-on http://localhost:3000 && cross-env ELECTRON_START_URL=http://localhost:3000 electron .",
+    "dev": "cross-env NEXT_TELEMETRY_DISABLED=1 next dev -p 3010",
+    "dev:full": "concurrently \"npm run dev\" \"wait-on http://localhost:3010 && set PATH=%USERPROFILE%\\.cargo\\bin;%PATH% && npx tauri dev\"",
+    "dev:tauri": "concurrently \"npm run dev\" \"wait-on http://localhost:3010 && set PATH=%USERPROFILE%\\.cargo\\bin;%PATH% && npx tauri dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prebuild:electron": "npm run build",
-    "build:electron": "electron-builder",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux",
-    "build:all": "npm run build && electron-builder --win --mac --linux",
-    "build:portable": "npm run build && electron-builder --win portable",
-    "build:installer": "npm run build && electron-builder --win nsis",
-    "build:zip": "npm run build && electron-builder --win zip",
-    "pack": "electron-builder --dir",
-    "postinstall": "electron-builder install-app-deps"
+    "build:tauri": "npm run build && npx tauri build",
+    "voice:list": "powershell -NoLogo -NoProfile -ExecutionPolicy Bypass -File \"tools/voice/list-voices.ps1\"",
+    "voice:say": "powershell -NoLogo -NoProfile -ExecutionPolicy Bypass -File \"tools/voice/speak-text.ps1\"",
+    "voice:clipboard": "powershell -NoLogo -NoProfile -ExecutionPolicy Bypass -File \"tools/voice/speak-clipboard.ps1\"",
+    "voice:dictate": "powershell -NoLogo -NoProfile -ExecutionPolicy Bypass -File \"tools/voice/dictate-to-caret.ps1\" -Culture en-US",
+    "voice:test": "powershell -NoLogo -NoProfile -ExecutionPolicy Bypass -File \"tools/voice/speak-text.ps1\" -VoiceName \"Microsoft David Desktop\" -Text \"Hello, I am your Jarvis assistant. Voice is online.\"",
+    "voice:auto": "powershell -NoLogo -NoProfile -ExecutionPolicy Bypass -File \"tools/voice/auto-speak-clipboard.ps1\" -IntervalMs 500 -VoiceName \"Microsoft David Desktop\" -Rate 0 -Volume 100",
+    "voice:auto:zira": "powershell -NoLogo -NoProfile -ExecutionPolicy Bypass -File \"tools/voice/auto-speak-clipboard.ps1\" -IntervalMs 500 -VoiceName \"Microsoft Zira Desktop\" -Rate 0 -Volume 100"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
@@ -87,11 +82,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@tauri-apps/cli": "^1.6.0",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
-    "electron": "^38.1.0",
-    "electron-builder": "^26.0.12",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "express": "^4.21.2",
