--- a/.github/workflows/tauri-windows.yml
+++ b/.github/workflows/tauri-windows.yml
@@ -98,8 +98,18 @@ jobs:
           New-Item -ItemType Directory -Force -Path "src-tauri/resources/server/node" | Out-Null
           Copy-Item $nodeExe.FullName "src-tauri/resources/server/node/node.exe" -Force
 
+      - name: Debug info (Node and resources)
+        shell: powershell
+        run: |
+          node -v
+          Get-ChildItem -Recurse -File src-tauri/resources/server | Measure-Object
+          Get-ChildItem -Recurse -File src-tauri/resources/server | Select-Object -First 20 | Format-List
+
       - name: Build Tauri (Windows)
-        run: npx tauri build
+        env:
+          TAURI_LOG_LEVEL: debug
+          RUST_BACKTRACE: 1
+        run: npx tauri build -- -vv
 
       - name: Upload bundle artifact
         uses: actions/upload-artifact@v4
